<resources>
    <string name="app_name">Working Hours</string>
    <string name="alert">Alert</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerBtn">Register</string>
    <string name="loginBtn">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_header">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="register_header">Register</string>
    <string name="registration_successful">Registration successful.</string>
    <string name="ok">OK</string>
    <string name="nav_header">Hours worked: </string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
